--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,67 @@
 *.exe
 *.out
 *.app
+/.vs
+/.vs/CPP_WORK
+/.vs/CPP_WORK/FileContentIndex
+/.vs/CPP_WORK/FileContentIndex/89dfdd6a-9099-4e81-9056-7a3106186863.vsidx
+/.vs/CPP_WORK/v17
+/.vs/CPP_WORK/v17/.wsuo
+/.vs/CPP_WORK/v17/Browse.VC.db
+/.vs/CPP_WORK/v17/DocumentLayout.json
+/.vs/ProjectSettings.json
+/.vs/slnx.sqlite
+/.vs/Test001
+/.vs/Test001/FileContentIndex
+/.vs/Test001/FileContentIndex/901eb270-d178-4b1f-b1d1-bf344399f9fb.vsidx
+/.vs/Test001/v17
+/.vs/Test001/v17/.wsuo
+/.vs/Test001/v17/DocumentLayout.json
+/.vs/VSWorkspaceState.json
+/test01
+/test01/.vs/test01
+/test01/.vs/test01/FileContentIndex
+/test01/.vs/test01/FileContentIndex/187df8a0-23cc-4179-845d-ac6554c87177.vsidx
+/test01/.vs/test01/FileContentIndex/20e68eea-4a62-42eb-9fbc-7c5d632a6d35.vsidx
+/test01/.vs/test01/FileContentIndex/327cb80f-4a39-4098-bd82-d5bd25578553.vsidx
+/test01/.vs/test01/FileContentIndex/4176f7dc-2070-48b9-8d44-18fcf028ffb0.vsidx
+/test01/.vs/test01/FileContentIndex/bbabd9e3-c8f9-4c12-97cb-b472695bbdd5.vsidx
+/test01/.vs/test01/v17
+/test01/.vs/test01/v17/.suo
+/test01/.vs/test01/v17/Browse.VC.db
+/test01/.vs/test01/v17/Browse.VC.db-shm
+/test01/.vs/test01/v17/Browse.VC.db-wal
+/test01/.vs/test01/v17/Browse.VC.opendb
+/test01/.vs/test01/v17/DocumentLayout.json
+/test01/.vs/test01/v17/ipch/AutoPCH
+/test01/.vs/test01/v17/ipch/AutoPCH/1084b3b75b82b77a
+/test01/.vs/test01/v17/ipch/AutoPCH/1084b3b75b82b77a/TEST001_1.ipch
+/test01/.vs/test01/v17/ipch/AutoPCH/14ddc76b6daac4a6
+/test01/.vs/test01/v17/ipch/AutoPCH/14ddc76b6daac4a6/TEST001_1.ipch
+/test01/.vs/test01/v17/ipch/AutoPCH/65c375f3d5f81d55
+/test01/.vs/test01/v17/ipch/AutoPCH/65c375f3d5f81d55/TEST001.ipch
+/test01/.vs/test01/v17/ipch/AutoPCH/a5754f4f67ed966d
+/test01/.vs/test01/v17/ipch/AutoPCH/a5754f4f67ed966d/TEST001_2.ipch
+/test01/.vs/test01/v17/Solution.VC.db
+/test01/test01/x64/Debug
+/test01/test01/x64/Debug/test01.exe.recipe
+/test01/test01/x64/Debug/test01.ilk
+/test01/test01/x64/Debug/test01.log
+/test01/test01/x64/Debug/test01.tlog
+/test01/test01/x64/Debug/test01.tlog/CL.command.1.tlog
+/test01/test01/x64/Debug/test01.tlog/Cl.items.tlog
+/test01/test01/x64/Debug/test01.tlog/CL.read.1.tlog
+/test01/test01/x64/Debug/test01.tlog/CL.write.1.tlog
+/test01/test01/x64/Debug/test01.tlog/link.command.1.tlog
+/test01/test01/x64/Debug/test01.tlog/link.read.1.tlog
+/test01/test01/x64/Debug/test01.tlog/link.secondary.1.tlog
+/test01/test01/x64/Debug/test01.tlog/link.write.1.tlog
+/test01/test01/x64/Debug/test01.tlog/test01.lastbuildstate
+/test01/test01/x64/Debug/vc143.idb
+/test01/test01/x64/Debug/vc143.pdb
+/test01/x64/Debug
+/test01/x64/Debug/test01.pdb
+/test001.cpp
+/test001_1.cpp
+/test001_2.cpp
+/.gitignore
